deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-api
  template:
    metadata:
      labels:
        app: flight-api
    spec:
      serviceAccountName: flight-api-sa
      containers:
      - name: flight-api
        image: rimzdn/flight-api
        ports:
        - containerPort: 5000
        - containerPort: 50051
