service-checkin.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkin-api
spec:
  selector:
    app: checkin-api
  ports:
  - port: 5001
    targetPort: 5001
  type: NodePort
