service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-api
spec:
  selector:
    app: flight-api
  ports:
  - port: 5000
    targetPort: 5000
  type: NodePort
