ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: flight-api.info
      http:
        paths:
          - path: /flights
            pathType: Prefix
            backend:
              service:
                name: flight-api
                port:
                  number: 5000
          - path: /checkin
            pathType: Prefix
            backend:
              service:
                name: checkin-api
                port:
                  number: 5001
